# vulkan-playground

./: .gitignore  CMakeLists.txt  Engine.h  lci  main.cpp  shader_compile.lol
shaders/: baker.comp  debugvoxels.frag  deferred.frag  deferred.spv  fragment.frag  fragment.spv  fullscreenQuad.spv  fullscreenQuad.vert  grid.frag  raymarch.frag  sortvoxels.comp  svo.comp  transparent.frag  transparent.spv  vertex.spv  vertex.vert  voxeldisplay.frag  voxeldisplay.vert  voxelize.comp  voxelize.frag  voxelize.geom  voxelize.vert  voxelize_textured.frag
src/core/: Device.cpp  Device.h  Queue.cpp  Queue.h  Swapchain.cpp  Swapchain.h  SwapchainManager.cpp  SwapchainManager.h  VulkanInstance.cpp  VulkanInstance.h
src/descriptor/: DescriptorSetManager.cpp  DescriptorSetManager.h
src/experimental/: VoxelGrid.cpp  VoxelGrid.h  voxel.h  voxelizer.h
src/pipeline/: GraphicsPipelineBuilder.cpp  GraphicsPipelineBuilder.h  PipelineLayoutManager.cpp  PipelineLayoutManager.h
src/rendering/: CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h  Framebuffer.cpp  Framebuffer.h  RenderPass.cpp  RenderPass.h
src/resource/: Buffer.cpp  Buffer.h  Image.cpp  Image.h  MemoryAllocator.cpp  MemoryAllocator.h  Resource.cpp  Resource.h  ResourceBarrier.cpp  ResourceBarrier.h  ResourceManager.cpp  ResourceManager.h  ResourceTracker.cpp  Sampler.cpp  Sampler.h  StagingBufferManager.cpp  StagingBufferManager.h  Texture.cpp  Texture.h
src/scene/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  Scene.h
src/shader/: ShaderModule.cpp  ShaderModule.h  ShaderReflection.cpp  ShaderReflection.h
src/sync/: Fence.cpp  Fence.h  Semaphore.cpp  Semaphore.h
src/util/: VulkanUtils.cpp  VulkanUtils.h  Window.cpp  Window.h
